parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> programa
Rule 1     programa -> SCRIPT pnCrearDirFunc ID pnScriptFuncDir SEMICOLON varp funcp bloque
Rule 2     varp -> var varp
Rule 3     varp -> empty
Rule 4     funcp -> func funcp
Rule 5     funcp -> empty
Rule 6     bloque -> DO LEFT_CUR_BRACKET varp funcp estatutop RIGHT_CUR_BRACKET pnEndScript
Rule 7     estatutop -> estatuto estatutop
Rule 8     estatutop -> empty
Rule 9     tipo_simp -> INT pnSaveTypeVar
Rule 10    tipo_simp -> FLOAT pnSaveTypeVar
Rule 11    tipo_simp -> CHAR pnSaveTypeVar
Rule 12    tipo_comp -> DATAFRAME
Rule 13    tipo_comp -> file
Rule 14    copy -> READ_FILE LEFT_PARENT LETRERO RIGHT_PARENT SEMICOLON
Rule 15    file -> ID
Rule 16    variable -> ID indexp
Rule 17    indexp -> LEFT_SQR_BRACKET exp indexpp RIGHT_SQR_BRACKET
Rule 18    indexp -> empty
Rule 19    indexpp -> COMMA exp
Rule 20    indexpp -> empty
Rule 21    llamada -> ID LEFT_PARENT expp RIGHT_PARENT SEMICOLON
Rule 22    expp -> exp exppp
Rule 23    expp -> empty
Rule 24    exppp -> COMMA exp exppp
Rule 25    exppp -> empty
Rule 26    var -> VAR pnCheckTablaVar v ARROW idp SEMICOLON
Rule 27    v -> DATAFRAME pnSaveTypeVar
Rule 28    v -> tipo_simp vp
Rule 29    vp -> LEFT_SQR_BRACKET CTEI vpp RIGHT_SQR_BRACKET
Rule 30    vp -> empty
Rule 31    vpp -> COMMA CTEI
Rule 32    vpp -> empty
Rule 33    idp -> ID pnCheckNameTablaVar idpp
Rule 34    idpp -> COMMA ID pnCheckNameTablaVar idpp
Rule 35    idpp -> empty
Rule 36    func -> FUNC returnval ARROW ID pnAddFuncinDir LEFT_PARENT param RIGHT_PARENT LEFT_CUR_BRACKET varp estatutop RIGHT_CUR_BRACKET pnCloseCurrentFunction
Rule 37    returnval -> tipo_simp
Rule 38    returnval -> VOID pnSaveTypeVar
Rule 39    param -> tipo_simp ARROW ID paramp
Rule 40    param -> empty
Rule 41    paramp -> COMMA param paramp
Rule 42    paramp -> empty
Rule 43    estatuto -> asign
Rule 44    estatuto -> llamada
Rule 45    estatuto -> lee
Rule 46    estatuto -> escribe
Rule 47    estatuto -> condicion
Rule 48    estatuto -> ciclow
Rule 49    estatuto -> ciclof
Rule 50    estatuto -> funcesp
Rule 51    estatuto -> return
Rule 52    estatuto -> copy
Rule 53    asign -> variable ASIGN exp SEMICOLON
Rule 54    lee -> READ LEFT_PARENT variable RIGHT_PARENT SEMICOLON
Rule 55    escribe -> WRITE LEFT_PARENT escribep RIGHT_PARENT SEMICOLON
Rule 56    escribep -> exp
Rule 57    escribep -> LETRERO
Rule 58    return -> RETURNS exp SEMICOLON
Rule 59    exp -> exprel logic
Rule 60    logic -> logicsig exprel logic
Rule 61    logic -> empty
Rule 62    logicsig -> AND
Rule 63    logicsig -> OR
Rule 64    exprel -> e relacionalp
Rule 65    relacionalp -> relsig e relacionalp
Rule 66    relacionalp -> empty
Rule 67    relsig -> LESS_THAN
Rule 68    relsig -> GREATER_THAN
Rule 69    relsig -> EQUALS
Rule 70    relsig -> NOTEQUALS
Rule 71    e -> t tp
Rule 72    tp -> tsig t tp
Rule 73    tp -> empty
Rule 74    tsig -> PLUS
Rule 75    tsig -> MINUS
Rule 76    t -> f fp
Rule 77    fp -> fsig f fp
Rule 78    fp -> empty
Rule 79    fsig -> MULT
Rule 80    fsig -> DIV
Rule 81    f -> LEFT_PARENT exp RIGHT_PARENT
Rule 82    f -> CTEI
Rule 83    f -> CTEF
Rule 84    f -> CTEC
Rule 85    f -> variable
Rule 86    f -> llamada
Rule 87    f -> funcesp
Rule 88    condicion -> IF LEFT_PARENT exp RIGHT_PARENT IF_TRUE LEFT_CUR_BRACKET estatutop RIGHT_CUR_BRACKET falsop
Rule 89    falsop -> IF_FALSE LEFT_CUR_BRACKET estatutop RIGHT_CUR_BRACKET
Rule 90    falsop -> empty
Rule 91    ciclow -> WHILE LEFT_PARENT exp RIGHT_PARENT LEFT_CUR_BRACKET estatutop RIGHT_CUR_BRACKET
Rule 92    ciclof -> FOR LEFT_PARENT asign exp RIGHT_PARENT LEFT_CUR_BRACKET estatutop RIGHT_CUR_BRACKET
Rule 93    funcesp -> mean
Rule 94    funcesp -> mode
Rule 95    funcesp -> median
Rule 96    funcesp -> variance
Rule 97    funcesp -> max
Rule 98    funcesp -> min
Rule 99    funcesp -> staddes
Rule 100   funcesp -> boxplot
Rule 101   funcesp -> linreg
Rule 102   funcesp -> copy
Rule 103   mean -> MEAN LEFT_PARENT variable RIGHT_PARENT SEMICOLON
Rule 104   mode -> MODE LEFT_PARENT variable RIGHT_PARENT SEMICOLON
Rule 105   median -> MEDIAN LEFT_PARENT variable RIGHT_PARENT SEMICOLON
Rule 106   variance -> VARIANCE LEFT_PARENT variable RIGHT_PARENT SEMICOLON
Rule 107   max -> MAX LEFT_PARENT variable RIGHT_PARENT SEMICOLON
Rule 108   min -> MIN LEFT_PARENT variable RIGHT_PARENT SEMICOLON
Rule 109   staddes -> STADDES LEFT_PARENT variable RIGHT_PARENT SEMICOLON
Rule 110   boxplot -> BOXPLOT LEFT_PARENT variable RIGHT_PARENT SEMICOLON
Rule 111   linreg -> LINREG LEFT_PARENT variable RIGHT_PARENT SEMICOLON
Rule 112   pnCrearDirFunc -> empty
Rule 113   pnScriptFuncDir -> empty
Rule 114   pnCheckTablaVar -> empty
Rule 115   pnSaveTypeVar -> empty
Rule 116   pnCheckNameTablaVar -> empty
Rule 117   pnAddFuncinDir -> empty
Rule 118   pnCloseCurrentFunction -> empty
Rule 119   pnEndScript -> empty
Rule 120   empty -> <empty>

Terminals, with rules where they appear

AND                  : 62
ARROW                : 26 36 39
ASIGN                : 53
BOXPLOT              : 110
CHAR                 : 11
COMMA                : 19 24 31 34 41
COMMENT              : 
CTEC                 : 84
CTEF                 : 83
CTEI                 : 29 31 82
DATAFRAME            : 12 27
DIV                  : 80
DO                   : 6
EQUALS               : 69
FLOAT                : 10
FOR                  : 92
FUNC                 : 36
GREATER_THAN         : 68
ID                   : 1 15 16 21 33 34 36 39
IF                   : 88
IF_FALSE             : 89
IF_TRUE              : 88
INT                  : 9
LEFT_CUR_BRACKET     : 6 36 88 89 91 92
LEFT_PARENT          : 14 21 36 54 55 81 88 91 92 103 104 105 106 107 108 109 110 111
LEFT_SQR_BRACKET     : 17 29
LESS_THAN            : 67
LETRERO              : 14 57
LINREG               : 111
MAX                  : 107
MEAN                 : 103
MEDIAN               : 105
MIN                  : 108
MINUS                : 75
MODE                 : 104
MULT                 : 79
NOTEQUALS            : 70
OR                   : 63
PLUS                 : 74
READ                 : 54
READ_FILE            : 14
RETURNS              : 58
RIGHT_CUR_BRACKET    : 6 36 88 89 91 92
RIGHT_PARENT         : 14 21 36 54 55 81 88 91 92 103 104 105 106 107 108 109 110 111
RIGHT_SQR_BRACKET    : 17 29
SCRIPT               : 1
SEMICOLON            : 1 14 21 26 53 54 55 58 103 104 105 106 107 108 109 110 111
STADDES              : 109
VAR                  : 26
VARIANCE             : 106
VOID                 : 38
WHILE                : 91
WRITE                : 55
error                : 

Nonterminals, with rules where they appear

asign                : 43 92
bloque               : 1
boxplot              : 100
ciclof               : 49
ciclow               : 48
condicion            : 47
copy                 : 52 102
e                    : 64 65
empty                : 3 5 8 18 20 23 25 30 32 35 40 42 61 66 73 78 90 112 113 114 115 116 117 118 119
escribe              : 46
escribep             : 55
estatuto             : 7
estatutop            : 6 7 36 88 89 91 92
exp                  : 17 19 22 24 53 56 58 81 88 91 92
expp                 : 21
exppp                : 22 24
exprel               : 59 60
f                    : 76 77
falsop               : 88
file                 : 13
fp                   : 76 77
fsig                 : 77
func                 : 4
funcesp              : 50 87
funcp                : 1 4 6
idp                  : 26
idpp                 : 33 34
indexp               : 16
indexpp              : 17
lee                  : 45
linreg               : 101
llamada              : 44 86
logic                : 59 60
logicsig             : 60
max                  : 97
mean                 : 93
median               : 95
min                  : 98
mode                 : 94
param                : 36 41
paramp               : 39 41
pnAddFuncinDir       : 36
pnCheckNameTablaVar  : 33 34
pnCheckTablaVar      : 26
pnCloseCurrentFunction : 36
pnCrearDirFunc       : 1
pnEndScript          : 6
pnSaveTypeVar        : 9 10 11 27 38
pnScriptFuncDir      : 1
programa             : 0
relacionalp          : 64 65
relsig               : 65
return               : 51
returnval            : 36
staddes              : 99
t                    : 71 72
tipo_comp            : 
tipo_simp            : 28 37 39
tp                   : 71 72
tsig                 : 72
v                    : 26
var                  : 2
variable             : 53 54 85 103 104 105 106 107 108 109 110 111
variance             : 96
varp                 : 1 2 6 36
vp                   : 28
vpp                  : 29

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . SCRIPT pnCrearDirFunc ID pnScriptFuncDir SEMICOLON varp funcp bloque

    SCRIPT          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> SCRIPT . pnCrearDirFunc ID pnScriptFuncDir SEMICOLON varp funcp bloque
    (112) pnCrearDirFunc -> . empty
    (120) empty -> .

    ID              reduce using rule 120 (empty -> .)

    pnCrearDirFunc                 shift and go to state 3
    empty                          shift and go to state 4

state 3

    (1) programa -> SCRIPT pnCrearDirFunc . ID pnScriptFuncDir SEMICOLON varp funcp bloque

    ID              shift and go to state 5


state 4

    (112) pnCrearDirFunc -> empty .

    ID              reduce using rule 112 (pnCrearDirFunc -> empty .)


state 5

    (1) programa -> SCRIPT pnCrearDirFunc ID . pnScriptFuncDir SEMICOLON varp funcp bloque
    (113) pnScriptFuncDir -> . empty
    (120) empty -> .

    SEMICOLON       reduce using rule 120 (empty -> .)

    pnScriptFuncDir                shift and go to state 6
    empty                          shift and go to state 7

state 6

    (1) programa -> SCRIPT pnCrearDirFunc ID pnScriptFuncDir . SEMICOLON varp funcp bloque

    SEMICOLON       shift and go to state 8


state 7

    (113) pnScriptFuncDir -> empty .

    SEMICOLON       reduce using rule 113 (pnScriptFuncDir -> empty .)


state 8

    (1) programa -> SCRIPT pnCrearDirFunc ID pnScriptFuncDir SEMICOLON . varp funcp bloque
    (2) varp -> . var varp
    (3) varp -> . empty
    (26) var -> . VAR pnCheckTablaVar v ARROW idp SEMICOLON
    (120) empty -> .

    VAR             shift and go to state 12
    FUNC            reduce using rule 120 (empty -> .)
    DO              reduce using rule 120 (empty -> .)

    varp                           shift and go to state 9
    var                            shift and go to state 10
    empty                          shift and go to state 11

state 9

    (1) programa -> SCRIPT pnCrearDirFunc ID pnScriptFuncDir SEMICOLON varp . funcp bloque
    (4) funcp -> . func funcp
    (5) funcp -> . empty
    (36) func -> . FUNC returnval ARROW ID pnAddFuncinDir LEFT_PARENT param RIGHT_PARENT LEFT_CUR_BRACKET varp estatutop RIGHT_CUR_BRACKET pnCloseCurrentFunction
    (120) empty -> .

    FUNC            shift and go to state 16
    DO              reduce using rule 120 (empty -> .)

    funcp                          shift and go to state 13
    func                           shift and go to state 14
    empty                          shift and go to state 15

state 10

    (2) varp -> var . varp
    (2) varp -> . var varp
    (3) varp -> . empty
    (26) var -> . VAR pnCheckTablaVar v ARROW idp SEMICOLON
    (120) empty -> .

    VAR             shift and go to state 12
    FUNC            reduce using rule 120 (empty -> .)
    DO              reduce using rule 120 (empty -> .)
    ID              reduce using rule 120 (empty -> .)
    READ            reduce using rule 120 (empty -> .)
    WRITE           reduce using rule 120 (empty -> .)
    IF              reduce using rule 120 (empty -> .)
    WHILE           reduce using rule 120 (empty -> .)
    FOR             reduce using rule 120 (empty -> .)
    RETURNS         reduce using rule 120 (empty -> .)
    READ_FILE       reduce using rule 120 (empty -> .)
    MEAN            reduce using rule 120 (empty -> .)
    MODE            reduce using rule 120 (empty -> .)
    MEDIAN          reduce using rule 120 (empty -> .)
    VARIANCE        reduce using rule 120 (empty -> .)
    MAX             reduce using rule 120 (empty -> .)
    MIN             reduce using rule 120 (empty -> .)
    STADDES         reduce using rule 120 (empty -> .)
    BOXPLOT         reduce using rule 120 (empty -> .)
    LINREG          reduce using rule 120 (empty -> .)
    RIGHT_CUR_BRACKET reduce using rule 120 (empty -> .)

    var                            shift and go to state 10
    varp                           shift and go to state 17
    empty                          shift and go to state 11

state 11

    (3) varp -> empty .

    FUNC            reduce using rule 3 (varp -> empty .)
    DO              reduce using rule 3 (varp -> empty .)
    ID              reduce using rule 3 (varp -> empty .)
    READ            reduce using rule 3 (varp -> empty .)
    WRITE           reduce using rule 3 (varp -> empty .)
    IF              reduce using rule 3 (varp -> empty .)
    WHILE           reduce using rule 3 (varp -> empty .)
    FOR             reduce using rule 3 (varp -> empty .)
    RETURNS         reduce using rule 3 (varp -> empty .)
    READ_FILE       reduce using rule 3 (varp -> empty .)
    MEAN            reduce using rule 3 (varp -> empty .)
    MODE            reduce using rule 3 (varp -> empty .)
    MEDIAN          reduce using rule 3 (varp -> empty .)
    VARIANCE        reduce using rule 3 (varp -> empty .)
    MAX             reduce using rule 3 (varp -> empty .)
    MIN             reduce using rule 3 (varp -> empty .)
    STADDES         reduce using rule 3 (varp -> empty .)
    BOXPLOT         reduce using rule 3 (varp -> empty .)
    LINREG          reduce using rule 3 (varp -> empty .)
    RIGHT_CUR_BRACKET reduce using rule 3 (varp -> empty .)


state 12

    (26) var -> VAR . pnCheckTablaVar v ARROW idp SEMICOLON
    (114) pnCheckTablaVar -> . empty
    (120) empty -> .

    DATAFRAME       reduce using rule 120 (empty -> .)
    INT             reduce using rule 120 (empty -> .)
    FLOAT           reduce using rule 120 (empty -> .)
    CHAR            reduce using rule 120 (empty -> .)

    pnCheckTablaVar                shift and go to state 18
    empty                          shift and go to state 19

state 13

    (1) programa -> SCRIPT pnCrearDirFunc ID pnScriptFuncDir SEMICOLON varp funcp . bloque
    (6) bloque -> . DO LEFT_CUR_BRACKET varp funcp estatutop RIGHT_CUR_BRACKET pnEndScript

    DO              shift and go to state 21

    bloque                         shift and go to state 20

state 14

    (4) funcp -> func . funcp
    (4) funcp -> . func funcp
    (5) funcp -> . empty
    (36) func -> . FUNC returnval ARROW ID pnAddFuncinDir LEFT_PARENT param RIGHT_PARENT LEFT_CUR_BRACKET varp estatutop RIGHT_CUR_BRACKET pnCloseCurrentFunction
    (120) empty -> .

    FUNC            shift and go to state 16
    DO              reduce using rule 120 (empty -> .)
    ID              reduce using rule 120 (empty -> .)
    READ            reduce using rule 120 (empty -> .)
    WRITE           reduce using rule 120 (empty -> .)
    IF              reduce using rule 120 (empty -> .)
    WHILE           reduce using rule 120 (empty -> .)
    FOR             reduce using rule 120 (empty -> .)
    RETURNS         reduce using rule 120 (empty -> .)
    READ_FILE       reduce using rule 120 (empty -> .)
    MEAN            reduce using rule 120 (empty -> .)
    MODE            reduce using rule 120 (empty -> .)
    MEDIAN          reduce using rule 120 (empty -> .)
    VARIANCE        reduce using rule 120 (empty -> .)
    MAX             reduce using rule 120 (empty -> .)
    MIN             reduce using rule 120 (empty -> .)
    STADDES         reduce using rule 120 (empty -> .)
    BOXPLOT         reduce using rule 120 (empty -> .)
    LINREG          reduce using rule 120 (empty -> .)
    RIGHT_CUR_BRACKET reduce using rule 120 (empty -> .)

    func                           shift and go to state 14
    funcp                          shift and go to state 22
    empty                          shift and go to state 15

state 15

    (5) funcp -> empty .

    DO              reduce using rule 5 (funcp -> empty .)
    ID              reduce using rule 5 (funcp -> empty .)
    READ            reduce using rule 5 (funcp -> empty .)
    WRITE           reduce using rule 5 (funcp -> empty .)
    IF              reduce using rule 5 (funcp -> empty .)
    WHILE           reduce using rule 5 (funcp -> empty .)
    FOR             reduce using rule 5 (funcp -> empty .)
    RETURNS         reduce using rule 5 (funcp -> empty .)
    READ_FILE       reduce using rule 5 (funcp -> empty .)
    MEAN            reduce using rule 5 (funcp -> empty .)
    MODE            reduce using rule 5 (funcp -> empty .)
    MEDIAN          reduce using rule 5 (funcp -> empty .)
    VARIANCE        reduce using rule 5 (funcp -> empty .)
    MAX             reduce using rule 5 (funcp -> empty .)
    MIN             reduce using rule 5 (funcp -> empty .)
    STADDES         reduce using rule 5 (funcp -> empty .)
    BOXPLOT         reduce using rule 5 (funcp -> empty .)
    LINREG          reduce using rule 5 (funcp -> empty .)
    RIGHT_CUR_BRACKET reduce using rule 5 (funcp -> empty .)


state 16

    (36) func -> FUNC . returnval ARROW ID pnAddFuncinDir LEFT_PARENT param RIGHT_PARENT LEFT_CUR_BRACKET varp estatutop RIGHT_CUR_BRACKET pnCloseCurrentFunction
    (37) returnval -> . tipo_simp
    (38) returnval -> . VOID pnSaveTypeVar
    (9) tipo_simp -> . INT pnSaveTypeVar
    (10) tipo_simp -> . FLOAT pnSaveTypeVar
    (11) tipo_simp -> . CHAR pnSaveTypeVar

    VOID            shift and go to state 25
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28

    returnval                      shift and go to state 23
    tipo_simp                      shift and go to state 24

state 17

    (2) varp -> var varp .

    FUNC            reduce using rule 2 (varp -> var varp .)
    DO              reduce using rule 2 (varp -> var varp .)
    ID              reduce using rule 2 (varp -> var varp .)
    READ            reduce using rule 2 (varp -> var varp .)
    WRITE           reduce using rule 2 (varp -> var varp .)
    IF              reduce using rule 2 (varp -> var varp .)
    WHILE           reduce using rule 2 (varp -> var varp .)
    FOR             reduce using rule 2 (varp -> var varp .)
    RETURNS         reduce using rule 2 (varp -> var varp .)
    READ_FILE       reduce using rule 2 (varp -> var varp .)
    MEAN            reduce using rule 2 (varp -> var varp .)
    MODE            reduce using rule 2 (varp -> var varp .)
    MEDIAN          reduce using rule 2 (varp -> var varp .)
    VARIANCE        reduce using rule 2 (varp -> var varp .)
    MAX             reduce using rule 2 (varp -> var varp .)
    MIN             reduce using rule 2 (varp -> var varp .)
    STADDES         reduce using rule 2 (varp -> var varp .)
    BOXPLOT         reduce using rule 2 (varp -> var varp .)
    LINREG          reduce using rule 2 (varp -> var varp .)
    RIGHT_CUR_BRACKET reduce using rule 2 (varp -> var varp .)


state 18

    (26) var -> VAR pnCheckTablaVar . v ARROW idp SEMICOLON
    (27) v -> . DATAFRAME pnSaveTypeVar
    (28) v -> . tipo_simp vp
    (9) tipo_simp -> . INT pnSaveTypeVar
    (10) tipo_simp -> . FLOAT pnSaveTypeVar
    (11) tipo_simp -> . CHAR pnSaveTypeVar

    DATAFRAME       shift and go to state 30
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    CHAR            shift and go to state 28

    v                              shift and go to state 29
    tipo_simp                      shift and go to state 31

state 19

    (114) pnCheckTablaVar -> empty .

    DATAFRAME       reduce using rule 114 (pnCheckTablaVar -> empty .)
    INT             reduce using rule 114 (pnCheckTablaVar -> empty .)
    FLOAT           reduce using rule 114 (pnCheckTablaVar -> empty .)
    CHAR            reduce using rule 114 (pnCheckTablaVar -> empty .)


state 20

    (1) programa -> SCRIPT pnCrearDirFunc ID pnScriptFuncDir SEMICOLON varp funcp bloque .

    $end            reduce using rule 1 (programa -> SCRIPT pnCrearDirFunc ID pnScriptFuncDir SEMICOLON varp funcp bloque .)


state 21

    (6) bloque -> DO . LEFT_CUR_BRACKET varp funcp estatutop RIGHT_CUR_BRACKET pnEndScript

    LEFT_CUR_BRACKET shift and go to state 32


state 22

    (4) funcp -> func funcp .

    DO              reduce using rule 4 (funcp -> func funcp .)
    ID              reduce using rule 4 (funcp -> func funcp .)
    READ            reduce using rule 4 (funcp -> func funcp .)
    WRITE           reduce using rule 4 (funcp -> func funcp .)
    IF              reduce using rule 4 (funcp -> func funcp .)
    WHILE           reduce using rule 4 (funcp -> func funcp .)
    FOR             reduce using rule 4 (funcp -> func funcp .)
    RETURNS         reduce using rule 4 (funcp -> func funcp .)
    READ_FILE       reduce using rule 4 (funcp -> func funcp .)
    MEAN            reduce using rule 4 (funcp -> func funcp .)
    MODE            reduce using rule 4 (funcp -> func funcp .)
    MEDIAN          reduce using rule 4 (funcp -> func funcp .)
    VARIANCE        reduce using rule 4 (funcp -> func funcp .)
    MAX             reduce using rule 4 (funcp -> func funcp .)
    MIN             reduce using rule 4 (funcp -> func funcp .)
    STADDES         reduce using rule 4 (funcp -> func funcp .)
    BOXPLOT         reduce using rule 4 (funcp -> func funcp .)
    LINREG          reduce using rule 4 (funcp -> func funcp .)
    RIGHT_CUR_BRACKET reduce using rule 4 (funcp -> func funcp .)


state 23

    (36) func -> FUNC returnval . ARROW ID pnAddFuncinDir LEFT_PARENT param RIGHT_PARENT LEFT_CUR_BRACKET varp estatutop RIGHT_CUR_BRACKET pnCloseCurrentFunction

    ARROW           shift and go to state 33


state 24

    (37) returnval -> tipo_simp .

    ARROW           reduce using rule 37 (returnval -> tipo_simp .)


state 25

    (38) returnval -> VOID . pnSaveTypeVar
    (115) pnSaveTypeVar -> . empty
    (120) empty -> .

    ARROW           reduce using rule 120 (empty -> .)

    pnSaveTypeVar                  shift and go to state 34
    empty                          shift and go to state 35

state 26

    (9) tipo_simp -> INT . pnSaveTypeVar
    (115) pnSaveTypeVar -> . empty
    (120) empty -> .

    ARROW           reduce using rule 120 (empty -> .)
    LEFT_SQR_BRACKET reduce using rule 120 (empty -> .)

    pnSaveTypeVar                  shift and go to state 36
    empty                          shift and go to state 35

state 27

    (10) tipo_simp -> FLOAT . pnSaveTypeVar
    (115) pnSaveTypeVar -> . empty
    (120) empty -> .

    ARROW           reduce using rule 120 (empty -> .)
    LEFT_SQR_BRACKET reduce using rule 120 (empty -> .)

    pnSaveTypeVar                  shift and go to state 37
    empty                          shift and go to state 35

state 28

    (11) tipo_simp -> CHAR . pnSaveTypeVar
    (115) pnSaveTypeVar -> . empty
    (120) empty -> .

    ARROW           reduce using rule 120 (empty -> .)
    LEFT_SQR_BRACKET reduce using rule 120 (empty -> .)

    pnSaveTypeVar                  shift and go to state 38
    empty                          shift and go to state 35

state 29

    (26) var -> VAR pnCheckTablaVar v . ARROW idp SEMICOLON

    ARROW           shift and go to state 39


state 30

    (27) v -> DATAFRAME . pnSaveTypeVar
    (115) pnSaveTypeVar -> . empty
    (120) empty -> .

    ARROW           reduce using rule 120 (empty -> .)

    pnSaveTypeVar                  shift and go to state 40
    empty                          shift and go to state 35

state 31

    (28) v -> tipo_simp . vp
    (29) vp -> . LEFT_SQR_BRACKET CTEI vpp RIGHT_SQR_BRACKET
    (30) vp -> . empty
    (120) empty -> .

    LEFT_SQR_BRACKET shift and go to state 42
    ARROW           reduce using rule 120 (empty -> .)

    vp                             shift and go to state 41
    empty                          shift and go to state 43

state 32

    (6) bloque -> DO LEFT_CUR_BRACKET . varp funcp estatutop RIGHT_CUR_BRACKET pnEndScript
    (2) varp -> . var varp
    (3) varp -> . empty
    (26) var -> . VAR pnCheckTablaVar v ARROW idp SEMICOLON
    (120) empty -> .

    VAR             shift and go to state 12
    FUNC            reduce using rule 120 (empty -> .)
    ID              reduce using rule 120 (empty -> .)
    READ            reduce using rule 120 (empty -> .)
    WRITE           reduce using rule 120 (empty -> .)
    IF              reduce using rule 120 (empty -> .)
    WHILE           reduce using rule 120 (empty -> .)
    FOR             reduce using rule 120 (empty -> .)
    RETURNS         reduce using rule 120 (empty -> .)
    READ_FILE       reduce using rule 120 (empty -> .)
    MEAN            reduce using rule 120 (empty -> .)
    MODE            reduce using rule 120 (empty -> .)
    MEDIAN          reduce using rule 120 (empty -> .)
    VARIANCE        reduce using rule 120 (empty -> .)
    MAX             reduce using rule 120 (empty -> .)
    MIN             reduce using rule 120 (empty -> .)
    STADDES         reduce using rule 120 (empty -> .)
    BOXPLOT         reduce using rule 120 (empty -> .)
    LINREG          reduce using rule 120 (empty -> .)
    RIGHT_CUR_BRACKET reduce using rule 120 (empty -> .)

    varp                           shift and go to state 44
    var                            shift and go to state 10
    empty                          shift and go to state 11

state 33

    (36) func -> FUNC returnval ARROW . ID pnAddFuncinDir LEFT_PARENT param RIGHT_PARENT LEFT_CUR_BRACKET varp estatutop RIGHT_CUR_BRACKET pnCloseCurrentFunction

    ID              shift and go to state 45


state 34

    (38) returnval -> VOID pnSaveTypeVar .

    ARROW           reduce using rule 38 (returnval -> VOID pnSaveTypeVar .)


state 35

    (115) pnSaveTypeVar -> empty .

    ARROW           reduce using rule 115 (pnSaveTypeVar -> empty .)
    LEFT_SQR_BRACKET reduce using rule 115 (pnSaveTypeVar -> empty .)


state 36

    (9) tipo_simp -> INT pnSaveTypeVar .

    ARROW           reduce using rule 9 (tipo_simp -> INT pnSaveTypeVar .)
    LEFT_SQR_BRACKET reduce using rule 9 (tipo_simp -> INT pnSaveTypeVar .)


state 37

    (10) tipo_simp -> FLOAT pnSaveTypeVar .

    ARROW           reduce using rule 10 (tipo_simp -> FLOAT pnSaveTypeVar .)
    LEFT_SQR_BRACKET reduce using rule 10 (tipo_simp -> FLOAT pnSaveTypeVar .)


state 38

    (11) tipo_simp -> CHAR pnSaveTypeVar .

    ARROW           reduce using rule 11 (tipo_simp -> CHAR pnSaveTypeVar .)
    LEFT_SQR_BRACKET reduce using rule 11 (tipo_simp -> CHAR pnSaveTypeVar .)


state 39

    (26) var -> VAR pnCheckTablaVar v ARROW . idp SEMICOLON
    (33) idp -> . ID pnCheckNameTablaVar idpp

    ID              shift and go to state 47

    idp                            shift and go to state 46

state 40

    (27) v -> DATAFRAME pnSaveTypeVar .

    ARROW           reduce using rule 27 (v -> DATAFRAME pnSaveTypeVar .)


state 41

    (28) v -> tipo_simp vp .

    ARROW           reduce using rule 28 (v -> tipo_simp vp .)


state 42

    (29) vp -> LEFT_SQR_BRACKET . CTEI vpp RIGHT_SQR_BRACKET

    CTEI            shift and go to state 48


state 43

    (30) vp -> empty .

    ARROW           reduce using rule 30 (vp -> empty .)


state 44

    (6) bloque -> DO LEFT_CUR_BRACKET varp . funcp estatutop RIGHT_CUR_BRACKET pnEndScript
    (4) funcp -> . func funcp
    (5) funcp -> . empty
    (36) func -> . FUNC returnval ARROW ID pnAddFuncinDir LEFT_PARENT param RIGHT_PARENT LEFT_CUR_BRACKET varp estatutop RIGHT_CUR_BRACKET pnCloseCurrentFunction
    (120) empty -> .

    FUNC            shift and go to state 16
    ID              reduce using rule 120 (empty -> .)
    READ            reduce using rule 120 (empty -> .)
    WRITE           reduce using rule 120 (empty -> .)
    IF              reduce using rule 120 (empty -> .)
    WHILE           reduce using rule 120 (empty -> .)
    FOR             reduce using rule 120 (empty -> .)
    RETURNS         reduce using rule 120 (empty -> .)
    READ_FILE       reduce using rule 120 (empty -> .)
    MEAN            reduce using rule 120 (empty -> .)
    MODE            reduce using rule 120 (empty -> .)
    MEDIAN          reduce using rule 120 (empty -> .)
    VARIANCE        reduce using rule 120 (empty -> .)
    MAX             reduce using rule 120 (empty -> .)
    MIN             reduce using rule 120 (empty -> .)
    STADDES         reduce using rule 120 (empty -> .)
    BOXPLOT         reduce using rule 120 (empty -> .)
    LINREG          reduce using rule 120 (empty -> .)
    RIGHT_CUR_BRACKET reduce using rule 120 (empty -> .)

    funcp                          shift and go to state 49
    func                           shift and go to state 14
    empty                          shift and go to state 15

state 45

    (36) func -> FUNC returnval ARROW ID . pnAddFuncinDir LEFT_PARENT param RIGHT_PARENT LEFT_CUR_BRACKET varp estatutop RIGHT_CUR_BRACKET pnCloseCurrentFunction
    (117) pnAddFuncinDir -> . empty
    (120) empty -> .

    LEFT_PARENT     reduce using rule 120 (empty -> .)

    pnAddFuncinDir                 shift and go to state 50
    empty                          shift and go to state 51

state 46

    (26) var -> VAR pnCheckTablaVar v ARROW idp . SEMICOLON

    SEMICOLON       shift and go to state 52


state 47

    (33) idp -> ID . pnCheckNameTablaVar idpp
    (116) pnCheckNameTablaVar -> . empty
    (120) empty -> .

    COMMA           reduce using rule 120 (empty -> .)
    SEMICOLON       reduce using rule 120 (empty -> .)

    pnCheckNameTablaVar            shift and go to state 53
    empty                          shift and go to state 54

state 48

    (29) vp -> LEFT_SQR_BRACKET CTEI . vpp RIGHT_SQR_BRACKET
    (31) vpp -> . COMMA CTEI
    (32) vpp -> . empty
    (120) empty -> .

    COMMA           shift and go to state 56
    RIGHT_SQR_BRACKET reduce using rule 120 (empty -> .)

    vpp                            shift and go to state 55
    empty                          shift and go to state 57

state 49
